# tirex_loss

./: .gitignore  .gitmodules  LICENSE_NXAI  NOTES.md  NOTICE  README.md  main.py  pyproject.toml
data/home_electricity/: electricity.csv  home_electricity.csv  raw_processing.ipynb
data/home_electricity/raw/: Managerdaten_AT0030000000000000000000000746448_2023.csv  Managerdaten_AT0030000000000000000000000746448_2024.csv  Managerdaten_AT0030000000000000000000000746448_2024_2.csv  Managerdaten_AT0030000000000000000000000746448_2025.csv  Managerdaten_AT0030000000000000000000000746448_2025_2.csv  Managerdaten_AT0030000000000000000000000746448_2026.csv
models/tirex_autoregressive_20260517_221701/: batch_metrics.jsonl  epoch_metrics.jsonl
models/tirex_original_20260516_142119/: batch_metrics.jsonl  hyperparameters.json
models/tirex_original_20260516_232755/: batch_metrics.jsonl  best_model.pth  epoch_metrics.jsonl  hyperparameters.json  last_model.pth
notebooks/: data_download.ipynb  tirex_autoregressive.ipynb  tirex_evaluation.ipynb  tirex_introduction.ipynb  tirex_training.ipynb
report/tex/: main-report.tex  main-seminarreport.tex  references.bib
src/tirex_loss/: loss.py  push_git-lfs.bat
src/tirex_loss/dataloader/: __init__.py  dataloader.py  dataset.py  sampler.py  utils.py
src/tirex_loss/evaluation/: metrics.py
src/tirex_loss/logger/: plot.py  training_logger.py
src/tirex_loss/modifications/: autoregressive.py
src/tirex_loss/training/: __init__.py  lr_finder.py  tirex_trainer.py  utils.py
