[project]
name = "tirex-loss"
version = "0.1.0"
description = "This research explores different Loss functions on the TiRex Model and Architecture."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "tzdata",
    "niquests",
    "polars>=1.39.3",
    "ipykernel>=7.2.0",
    "scikit-learn>=1.8.0",
    "huggingface-hub>=1.10.1",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[build-system]
requires = ["uv_build>=0.11.12,<0.12"]
build-backend = "uv_build"